ci: update ci build to call cli submodule
the CI submodule in turn calls the core module

--- a/.github/workflows/TestAndCompile.yml
+++ b/.github/workflows/TestAndCompile.yml
@@ -17,4 +17,4 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }} # This actually isn't set, but it's not complaining atm. 
           native-image-job-reports: 'true'
       - name: call gradle to run tests and then compile
-        run: ./gradlew test nativeCompile
+        run: ./gradlew test cli:nativeCompile
