feat! introduce query for admin's pending projects
rename projects client to users client. this reflects the api path.

--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -2,5 +2,9 @@ micronaut:
   application:
     name:
       core
+  http:
+    services:
+      JustServe:
+        url: ${:https://api.justserve.org}
 justserve:
   key: # JUSTSERVE_KEY environment variable
