fix: correct default JustServe url

--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -5,6 +5,6 @@ micronaut:
   http:
     services:
       JustServe:
-        url: ${:https://api.justserve.org}
+        url: ${:https://justserve.org}
 justserve:
   key: # JUSTSERVE_KEY environment variable
