--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -1,10 +1,9 @@
 micronaut:
   application:
-    name:
-      core
+    name: core
   http:
     services:
-      JustServe:
-        url: ${:https://justserve.org} # MICRONAUT_HTTP_SERVICES_JUSTSERVE_URL environment variable
+      justserve:
+        url: https://dev.justserve.org # MICRONAUT_HTTP_SERVICES_JUSTSERVE_URL environment variable
 justserve:
   key: # JUSTSERVE_KEY environment variable
