--- a/.github/workflows/TestAndCompile.yml
+++ b/.github/workflows/TestAndCompile.yml
@@ -24,3 +24,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: justserve-${{ matrix.os }}
+          path: build/native/nativeCompile/justserve*
