--- a/.github/workflows/TestAndCompile.yml
+++ b/.github/workflows/TestAndCompile.yml
@@ -1,5 +1,5 @@
 name: GraalVM Native Image Test run and build tests
-on: [pull_request]
+on: [pull_request, workflow_dispatch]
 jobs:
   build:
     name: test and compile on ${{ matrix.os }}
