test: update past spec to use new auth var

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,10 @@ micronaut:
     services:
       justserve:
         url: ${JUSTSERVE_URL:`https://www.justserve.org`}
+    client:
+      read-timeout: 20s
 justserve:
-  token: ${JUSTSERVE_TOKEN:'i-need-to-be-defined'}
+  token: ${JUSTSERVE_TOKEN:i-need-to-be-defined}
 jackson:
   deserialization:
     ACCEPT_EMPTY_STRING_AS_NULL_OBJECT: true
