--- a/.github/workflows/TestAndCompile.yml
+++ b/.github/workflows/TestAndCompile.yml
@@ -8,7 +8,7 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
     env:
-      MICRONAUT_HTTP_SERVICES_JUSTSERVE_TOKEN: ${{ secrets.MICRONAUT_HTTP_SERVICES_JUSTSERVE_TOKEN }}
+      TEST_TOKEN: ${{ secrets.MICRONAUT_HTTP_SERVICES_JUSTSERVE_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: graalvm/setup-graalvm@v1
