--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,11 @@ micronaut:
   http:
     services:
       justserve:
-        url: https://www.justserve.org
-        token:
+        url: ${JUSTSERVE_URL:`https://www.justserve.org`}
+    client:
+      read-timeout: 20s
+justserve:
+  token: ${JUSTSERVE_TOKEN:i-need-to-be-defined}
 jackson:
   deserialization:
     ACCEPT_EMPTY_STRING_AS_NULL_OBJECT: true
