refactor: set version in app.props

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 micronaut:
   application:
-    name: fulcrum
+    name: justserve-cli
+    version: "@justserveCliVersion@"
   http:
     services:
       justserve:
